deployment/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: house-price-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: house-price-api
  template:
    metadata:
      labels:
        app: house-price-api
    spec:
      containers:
      - name: house-price-api
        image: a18ab77c4b90/house-price-api:v6
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: house-price-api-service
spec:
  selector:
    app: house-price-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 31884  # Explicitly set the NodePort
  type: NodePort
